--- a/learning.html
+++ b/learning.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<p id="demo">Click the button to change the layout of this paragraph</p>
+<p id="demo" style="color: blue">0</p>
 
 <button style="font-size: 20px" onclick="myFunction()">Click Me!</button>
 <br><br><br>
@@ -15,6 +15,7 @@
 <p id="click*"> </p>
 
 <script>
+document.getElementById("demo").style.fontSize = "30px";
 let num1 = 0;
 let num2 = 1;
 function myFunction() {
