--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 
 <p id="demo" style="color: blue">0</p>
 
-<button style="font-size: 20px" onclick="myFunction()">Click Me!</button>
+<button style="font-size: 35px" onclick="myFunction()">Click Me!</button>
 <br><br><br>
-<button onclick="buy1()">cost 10<br>+1 clicks</button>
-<button onclick="buy2()">cost 100<br>+11 clicks</button>
-<button onclick="buy3()">cost 1000<br>+104 clicks</button>
-<button onclick="buy4()">cost 10000<br>+1018 clicks</button>
+<button style="font-size: 20px" onclick="buy1()">cost 10<br>+1 clicks</button>
+<button style="font-size: 20px" onclick="buy2()">cost 100<br>+11 clicks</button>
+<button style="font-size: 20px" onclick="buy3()">cost 1000<br>+104 clicks</button>
+<button style="font-size: 20px"onclick="buy4()">cost 10000<br>+1018 clicks</button>
 
-<br><br><br><button onclick="buy()">buy max</button>
+<br><br><br><button style="font-size: 15px" onclick="buy()">buy max</button>
 <p id="click*"> </p>
 
 <script>
-document.getElementById("demo").style.fontSize = "30px";
+document.getElementById("demo").style.fontSize = "50px";
 let num1 = 0;
 let num2 = 1;
 function myFunction() {
   let x = document.getElementById("demo");
   num1 += num2;
-  x.style.fontSize = "30px"; 
+  x.style.fontSize = "50px"; 
   x.style.color = "blue"; 
   x.innerHTML = num1;
 }
