--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <br><form>
-  <label id="numberchange"for="quantity">Number:</label>
+  <label id="numberchange"for="quantity">ONLY WORKS IF YOU USE CHEAT CODE<br>Number:</label>
   <input type="number" id="cheatnumber" name="quantity" min="0" max="1000" step="1" value="0">
 </form>
 <br><button id="changebutton" onclick="changenumberbutton()">Change Number</button>
@@ -35,6 +35,7 @@
 
 let autobuy = false;
 document.getElementById("demo").style.fontSize = "40px";
+let cheated = false;
 let y = document.getElementById("click*");
 let x = document.getElementById("demo");
 let num1 = 0;
@@ -112,12 +113,15 @@ document.getElementById("autobuytext").innerHTML = "autobuy off";
 }
 function checkcheat() {
 if (cheatcode.value == "5408") {
-num1 += 1000;
-x.innerHTML = num1;
+ cheated = true;
 }
 }
 function changenumberbutton() {
-num1 += document.getElementById("numberchange").value;
+    if (cheated)
+    {
+num1 += parseInt(document.getElementById("cheatnumber").value);
+x.innerHTML = num1;
+}
 }
 </script>
 
